// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton all props renders as expected 1`] = `
<body>
  <div>
    <div
      aria-label="Copy"
      data-clipboard-text="more copiable text"
      data-testid="copy-button"
      role="button"
    >
      <span
        style="display: contents;"
      >
        <div
          aria-controls="radix-4"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <button
            class="px6 py6 btn btn--purple btn--stroke block"
            data-state="closed"
            data-testid="foo"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-clipboard"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`CopyButton basic renders as expected 1`] = `
<body>
  <div>
    <div
      aria-label="Copy"
      data-clipboard-text="Copied by the default test case"
      data-testid="copy-button"
      role="button"
    >
      <span
        style="display: contents;"
      >
        <div
          aria-controls="radix-0"
          aria-expanded="false"
          aria-haspopup="dialog"
          data-state="closed"
          type="button"
        >
          <button
            class="btn btn--xs py3 px3 round"
            data-state="closed"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="events-none icon"
              data-testid="icon-clipboard"
              focusable="false"
              style="width: 18px; height: 18px;"
            >
              <use
                xlink:href="#icon-clipboard"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
            >
              clipboard
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
</body>
`;
